--- a/src/data/eda/pages/reference/techniques-by-category.mdx
+++ b/src/data/eda/pages/reference/techniques-by-category.mdx
@@ -6,4 +6,81 @@ category: "reference"
 nistSection: "1.3.4 Techniques by Category"
 ---
 
-{/* Content will be populated in Phase 54 */}
+EDA techniques divide into **graphical** (visual pattern detection) and **quantitative** (numerical summary) methods. This taxonomy organizes all techniques by the analysis problem they address. See also [Analysis Questions](/eda/reference/analysis-questions/) for guidance on when to apply each category.
+
+## Distributional Analysis
+
+| Technique | Type | Purpose |
+|-----------|------|---------|
+| [Histogram](/eda/techniques/histogram/) | Graphical | Shape, modality, spread |
+| [Box Plot](/eda/techniques/box-plot/) | Graphical | Median, quartiles, outliers |
+| [Normal Probability Plot](/eda/techniques/normal-probability-plot/) | Graphical | Normality assessment |
+| [Probability Plot](/eda/techniques/probability-plot/) | Graphical | General distributional fit |
+| [PPCC Plot](/eda/techniques/ppcc-plot/) | Graphical | Optimal shape parameter |
+| [Q-Q Plot](/eda/techniques/qq-plot/) | Graphical | Compare two distributions |
+| [Anderson-Darling Test](/eda/quantitative/anderson-darling/) | Quantitative | Formal goodness-of-fit |
+| [Chi-Square GOF Test](/eda/quantitative/chi-square-gof/) | Quantitative | Categorical/binned fit |
+| [K-S Test](/eda/quantitative/kolmogorov-smirnov/) | Quantitative | Distribution-free GOF |
+| [Skewness and Kurtosis](/eda/quantitative/skewness-kurtosis/) | Quantitative | Shape measures |
+
+## Location (Central Tendency)
+
+| Technique | Type | Purpose |
+|-----------|------|---------|
+| [Histogram](/eda/techniques/histogram/) | Graphical | Visual center |
+| [Box Plot](/eda/techniques/box-plot/) | Graphical | Median display |
+| [Measures of Location](/eda/quantitative/measures-of-location/) | Quantitative | Mean, median, mode |
+| [Confidence Limits](/eda/quantitative/confidence-limits/) | Quantitative | Interval estimation |
+| [Two-Sample t-Test](/eda/quantitative/two-sample-t-test/) | Quantitative | Compare two means |
+| [One-Factor ANOVA](/eda/quantitative/one-factor-anova/) | Quantitative | Compare multiple means |
+| [Multi-Factor ANOVA](/eda/quantitative/multi-factor-anova/) | Quantitative | Factorial mean comparisons |
+
+## Spread (Dispersion)
+
+| Technique | Type | Purpose |
+|-----------|------|---------|
+| [Box Plot](/eda/techniques/box-plot/) | Graphical | IQR visualization |
+| [Histogram](/eda/techniques/histogram/) | Graphical | Range and shape |
+| [Measures of Scale](/eda/quantitative/measures-of-scale/) | Quantitative | Std dev, variance, range, IQR |
+| [Bartlett's Test](/eda/quantitative/bartletts-test/) | Quantitative | Equal variances (normal data) |
+| [Levene Test](/eda/quantitative/levene-test/) | Quantitative | Equal variances (robust) |
+| [Chi-Square SD Test](/eda/quantitative/chi-square-sd-test/) | Quantitative | Single variance test |
+| [F-Test](/eda/quantitative/f-test/) | Quantitative | Two-variance comparison |
+
+## Randomness
+
+| Technique | Type | Purpose |
+|-----------|------|---------|
+| [Run-Sequence Plot](/eda/techniques/run-sequence-plot/) | Graphical | Trend, shift detection |
+| [Lag Plot](/eda/techniques/lag-plot/) | Graphical | Serial dependence |
+| [Autocorrelation Plot](/eda/techniques/autocorrelation-plot/) | Graphical | Correlation structure |
+| [Autocorrelation](/eda/quantitative/autocorrelation/) | Quantitative | Lag-k correlation values |
+| [Runs Test](/eda/quantitative/runs-test/) | Quantitative | Formal randomness test |
+
+## Model Adequacy
+
+| Technique | Type | Purpose |
+|-----------|------|---------|
+| [6-Plot](/eda/techniques/6-plot/) | Graphical | Multi-panel diagnostic |
+| [4-Plot](/eda/techniques/4-plot/) | Graphical | Rapid assumption check |
+| [Scatter Plot](/eda/techniques/scatter-plot/) | Graphical | Residual patterns |
+| [Normal Probability Plot](/eda/techniques/normal-probability-plot/) | Graphical | Residual normality |
+
+## Outlier Detection
+
+| Technique | Type | Purpose |
+|-----------|------|---------|
+| [Box Plot](/eda/techniques/box-plot/) | Graphical | 1.5xIQR rule |
+| [Normal Probability Plot](/eda/techniques/normal-probability-plot/) | Graphical | Tail departures |
+| [Grubbs' Test](/eda/quantitative/grubbs-test/) | Quantitative | Single-outlier hypothesis test |
+
+## Multivariate and Time Series
+
+| Technique | Type | Purpose |
+|-----------|------|---------|
+| [Scatterplot Matrix](/eda/techniques/scatterplot-matrix/) | Graphical | Pairwise relationships |
+| [Star Plot](/eda/techniques/star-plot/) | Graphical | Multivariate profiles |
+| [Contour Plot](/eda/techniques/contour-plot/) | Graphical | 3D surface projection |
+| [Conditioning Plot](/eda/techniques/conditioning-plot/) | Graphical | Conditional relationships |
+| [Spectral Plot](/eda/techniques/spectral-plot/) | Graphical | Frequency decomposition |
+| [Complex Demodulation](/eda/techniques/complex-demodulation/) | Graphical | Amplitude/phase extraction |
