fix(62): revise plans based on checker feedback

--- a/.planning/phases/62-ceramic-strength-doe/62-01-PLAN.md
+++ b/.planning/phases/62-ceramic-strength-doe/62-01-PLAN.md
@@ -19,7 +19,8 @@ must_haves:
   truths:
     - "Response Variable Analysis section has H2 heading with 5 named H3 plot subsections (4-Plot, Run Sequence, Lag, Histogram, Normal Probability)"
     - "Batch Effect Analysis section has individually named subsections: Bihistogram, Batch Box Plot, Batch Block Plots, Batch Statistical Tests"
-    - "Lab Effect Analysis section has individually named subsections: Lab Box Plot, Lab Box Plot by Batch"
+    - "Lab Effect Analysis section has individually named subsections: Lab Box Plot, Lab Box Plot by Batch, Lab Statistical Tests"
+    - "Lab Statistical Tests subsection contains a one-way ANOVA F-test comparing lab means with F-statistic, degrees of freedom, critical value, and conclusion confirming labs are homogeneous"
     - "Bihistogram SVG renders two back-to-back histograms on shared x-axis for Batch 1 vs Batch 2"
     - "Block plot SVG renders batch means by lab showing consistent batch effect across all 8 labs"
     - "Lab box plots render 8-group box plots for all data, Batch 1 only, and Batch 2 only"
@@ -43,7 +44,7 @@ must_haves:
       provides: "Extended PlotType union with batch-bihistogram, batch-block-plot, lab-box-plot, lab-box-plot-batch1, lab-box-plot-batch2 and DOE types"
       contains: "batch-bihistogram"
     - path: "src/data/eda/pages/case-studies/ceramic-strength.mdx"
-      provides: "Restructured MDX with DOE Variation template headings and component calls for Response Variable, Batch Effect, Lab Effect sections"
+      provides: "Restructured MDX with DOE Variation template headings and component calls for Response Variable, Batch Effect, Lab Effect sections including Lab Statistical Tests"
       contains: "## Response Variable Analysis"
   key_links:
     - from: "src/lib/eda/svg-generators/bihistogram.ts"
@@ -67,7 +68,7 @@ must_haves:
 <objective>
 Create 4 new DOE-specific SVG generators (bihistogram, DOE mean plot, block plot, interaction plot), restructure the Ceramic Strength MDX to the DOE Variation canonical template, and wire all Response Variable, Batch Effect, and Lab Effect plot subsections with component calls.
 
-Purpose: CER-01 requires renaming to "Response Variable Analysis" with named subsections. CER-02 requires batch-specific plots including bihistogram and block plots. CER-03 requires lab-specific box plots. This plan handles all engineering (4 new generators) and restructures the first 3 analysis sections of the DOE template.
+Purpose: CER-01 requires renaming to "Response Variable Analysis" with named subsections. CER-02 requires batch-specific plots including bihistogram and block plots. CER-03 requires lab-specific box plots AND statistical tests comparing labs. This plan handles all engineering (4 new generators) and restructures the first 3 analysis sections of the DOE template.
 
 Output: 4 new SVG generator files, updated barrel exports, extended CeramicStrengthPlots component, restructured ceramic-strength.mdx with DOE template headings
 </objective>
@@ -151,6 +152,12 @@ export { generateHistogram, type HistogramOptions } from './histogram';
 export { generateBoxPlot, type BoxPlotOptions } from './box-plot';
 export { generateBarPlot, type BarPlotOptions } from './bar-plot';
 // ... 13 generators total. New generators must be added here.
+```
+
+From src/lib/eda/math/statistics.ts (relevant functions for ANOVA computation):
+```typescript
+export function mean(data: number[]): number;
+export function fQuantile(p: number, df1: number, df2: number): number;
 ```
 </interfaces>
 </context>
@@ -336,7 +343,7 @@ import {
   generateDoeMeanPlot,
   generateInteractionPlot,
 } from '../../lib/eda/svg-generators/index';
-import { mean } from '../../lib/eda/math/statistics';
+import { mean, fQuantile } from '../../lib/eda/math/statistics';
 ```
 
 1b. Extend the PlotType union with all new types:
@@ -389,6 +396,56 @@ const labBatchMeans = labs.map(lab => ({
     { group: 'Batch 2', mean: mean(ceramicStrength.filter(d => d.lab === lab && d.batch === 2).map(d => d.strength)) },
   ],
 }));
+
+// --- Lab ANOVA computation (CER-03: lab statistical tests) ---
+// One-way ANOVA comparing lab means across all 8 labs
+const allStrength = ceramicStrength.map(d => d.strength);
+const grandMean = mean(allStrength);
+const N = allStrength.length; // 480
+const k = 8; // number of labs
+
+// Between-group sum of squares: SSB = sum_j(n_j * (mean_j - grandMean)^2)
+const labMeans = labs.map(lab => {
+  const vals = ceramicStrength.filter(d => d.lab === lab).map(d => d.strength);
+  return { lab, mean: mean(vals), n: vals.length };
+});
+const SSB = labMeans.reduce((sum, lm) => sum + lm.n * (lm.mean - grandMean) ** 2, 0);
+
+// Within-group sum of squares: SSW = sum_j sum_i (x_ij - mean_j)^2
+const SSW = labs.reduce((sum, lab) => {
+  const vals = ceramicStrength.filter(d => d.lab === lab).map(d => d.strength);
+  const labMean = mean(vals);
+  return sum + vals.reduce((s, v) => s + (v - labMean) ** 2, 0);
+}, 0);
+
+const dfBetween = k - 1;       // 7
+const dfWithin = N - k;         // 472
+const MSB = SSB / dfBetween;
+const MSW = SSW / dfWithin;
+const labFStatistic = MSB / MSW;
+const labFCritical = fQuantile(0.95, dfBetween, dfWithin);
+const labAnovaReject = labFStatistic > labFCritical;
+// Expected result: F is small (labs are homogeneous), fail to reject H0
+```
+
+IMPORTANT: Export these ANOVA values so they can be referenced. Add them to an exported object or make them available as template variables. The MDX will reference the computed values via `<InlineMath>` with the actual numbers. The executor should compute the values first (e.g., by temporarily logging them), then hardcode the computed values into the MDX text. Alternatively, if CeramicStrengthPlots.astro can pass computed props, use that pattern.
+
+The simplest approach matching existing patterns: compute the ANOVA in the Astro component frontmatter, then log the values during the first build to get exact numbers. Write those exact numbers into the MDX as `<InlineMath>` expressions. The ANOVA computation code should remain in CeramicStrengthPlots.astro as documentation/verification but the MDX text uses the hardcoded computed values.
+
+1d. Add switch cases for ALL new plot types. For each case, call the appropriate generator with the computed data. Use the singleConfig (720x450) for all single-panel plots, and use a wider config `{ width: 720, height: 400, margin: { top: 35, right: 20, bottom: 55, left: 55 } }` for multi-panel DOE mean/SD plots.
+
+1e. Add default captions for all new plot types to the `defaultCaptions` record:
+- `'batch-bihistogram'`: 'Bihistogram comparing Batch 1 (top) and Batch 2 (bottom) ceramic strength distributions. Batch 1 is centered approximately 78 units higher.'
+- `'batch-block-plot'`: 'Block plot of mean strength by lab and batch. Batch 1 consistently exceeds Batch 2 across all 8 labs.'
+- `'lab-box-plot'`: 'Box plot of ceramic strength by lab (all data pooled). Minor variation in medians across labs compared to the dominant batch effect.'
+- `'lab-box-plot-batch1'`: 'Box plot of ceramic strength by lab for Batch 1 only. Median ranges from 650 to 700 across labs.'
+- `'lab-box-plot-batch2'`: 'Box plot of ceramic strength by lab for Batch 2 only. Median ranges from 550 to 600 across labs.'
+- `'doe-mean-batch1'`: 'DOE mean plot for Batch 1 showing mean strength at each factor level. Table speed (X1) has the steepest slope, indicating the largest effect.'
+- `'doe-mean-batch2'`: 'DOE mean plot for Batch 2 showing mean strength at each factor level. Down feed rate (X2) has the steepest slope, indicating the largest effect.'
+- `'doe-sd-batch1'`: 'DOE standard deviation plot for Batch 1 showing variability at each factor level.'
+- `'doe-sd-batch2'`: 'DOE standard deviation plot for Batch 2 showing variability at each factor level.'
+- `'interaction-batch1-x1x3'`: 'Interaction plot for Batch 1: Table Speed (X1) vs Wheel Grit (X3). Non-parallel lines indicate a substantial X1*X3 interaction effect of -20.25.'
+- `'interaction-batch2-x1x3'`: 'Interaction plot for Batch 2: Table Speed (X1) vs Wheel Grit (X3). Non-parallel lines indicate an X1*X3 interaction effect of -16.71.'
 
 // For DOE mean plots: factor means by batch
 const factorMeansBatch1 = [
@@ -482,7 +539,6 @@ const interactionBatch2X1X3 = {
     { aLevel: 'High (+1)', bLevel: '80 (+1)', mean: mean(batch2.filter(d => d.tableSpeed === 1 && d.wheelGrit === 1).map(d => d.strength)) },
   ],
 };
-```
 
 NOTE: `batch1` and `batch2` are already computed as arrays of CeramicStrengthObs objects:
 ```typescript
@@ -497,21 +553,6 @@ const batch1 = batch1Data.map(d => d.strength);
 const batch2 = batch2Data.map(d => d.strength);
 ```
 Then use `batch1Data` / `batch2Data` for all the filtering above.
-
-1d. Add switch cases for ALL new plot types. For each case, call the appropriate generator with the computed data. Use the singleConfig (720x450) for all single-panel plots, and use a wider config `{ width: 720, height: 400, margin: { top: 35, right: 20, bottom: 55, left: 55 } }` for multi-panel DOE mean/SD plots.
-
-1e. Add default captions for all new plot types to the `defaultCaptions` record:
-- `'batch-bihistogram'`: 'Bihistogram comparing Batch 1 (top) and Batch 2 (bottom) ceramic strength distributions. Batch 1 is centered approximately 78 units higher.'
-- `'batch-block-plot'`: 'Block plot of mean strength by lab and batch. Batch 1 consistently exceeds Batch 2 across all 8 labs.'
-- `'lab-box-plot'`: 'Box plot of ceramic strength by lab (all data pooled). Minor variation in medians across labs compared to the dominant batch effect.'
-- `'lab-box-plot-batch1'`: 'Box plot of ceramic strength by lab for Batch 1 only. Median ranges from 650 to 700 across labs.'
-- `'lab-box-plot-batch2'`: 'Box plot of ceramic strength by lab for Batch 2 only. Median ranges from 550 to 600 across labs.'
-- `'doe-mean-batch1'`: 'DOE mean plot for Batch 1 showing mean strength at each factor level. Table speed (X1) has the steepest slope, indicating the largest effect.'
-- `'doe-mean-batch2'`: 'DOE mean plot for Batch 2 showing mean strength at each factor level. Down feed rate (X2) has the steepest slope, indicating the largest effect.'
-- `'doe-sd-batch1'`: 'DOE standard deviation plot for Batch 1 showing variability at each factor level.'
-- `'doe-sd-batch2'`: 'DOE standard deviation plot for Batch 2 showing variability at each factor level.'
-- `'interaction-batch1-x1x3'`: 'Interaction plot for Batch 1: Table Speed (X1) vs Wheel Grit (X3). Non-parallel lines indicate a substantial X1*X3 interaction effect of -20.25.'
-- `'interaction-batch2-x1x3'`: 'Interaction plot for Batch 2: Table Speed (X1) vs Wheel Grit (X3). Non-parallel lines indicate an X1*X3 interaction effect of -16.71.'
 
 **Step 2: Restructure ceramic-strength.mdx to DOE Variation template**
 
@@ -573,6 +614,44 @@ When analyzed separately by batch, the lab effects show:
 
 <CeramicStrengthPlots type="lab-box-plot-batch2" caption="Box plot of ceramic strength by lab for Batch 2. Median ranges from 550 to 600 with somewhat more inter-lab variability." />
 
+### Lab Statistical Tests
+
+A [one-factor ANOVA](/eda/quantitative/one-factor-anova/) tests whether the 8 lab means differ significantly.
+
+<div class="my-4 px-4 py-3 rounded-lg bg-[var(--color-surface-alt)] border border-[var(--color-border)] text-center">
+  <InlineMath tex="H_0\!: \mu_1 = \mu_2 = \cdots = \mu_8 \quad \text{vs.} \quad H_a\!: \text{at least one } \mu_j \text{ differs}" />
+</div>
+
+The one-way ANOVA decomposes total variability into between-lab and within-lab components:
+
+| Source | df | SS | MS | F |
+|--------|----|----|----|----|
+| Between labs | <InlineMath tex="7" /> | <InlineMath tex="\text{SSB}" /> | <InlineMath tex="\text{MSB}" /> | <InlineMath tex="F" /> |
+| Within labs | <InlineMath tex="472" /> | <InlineMath tex="\text{SSW}" /> | <InlineMath tex="\text{MSW}" /> | |
+| Total | <InlineMath tex="479" /> | <InlineMath tex="\text{SST}" /> | | |
+
+IMPORTANT: The executor must compute the actual ANOVA values from the dataset at build time. The ANOVA computation is included in CeramicStrengthPlots.astro (Step 1c above). During the first build, temporarily log the computed values (labFStatistic, labFCritical, SSB, SSW, MSB, MSW) to get the exact numbers, then replace the placeholder `\text{SSB}`, `\text{SSW}`, etc. in the ANOVA table with the actual computed values formatted to 2-4 decimal places.
+
+The ANOVA table in the MDX should look like (with actual computed values):
+
+| Source | df | SS | MS | F |
+|--------|----|----|----|----|
+| Between labs | <InlineMath tex="7" /> | <InlineMath tex="{computed SSB}" /> | <InlineMath tex="{computed MSB}" /> | <InlineMath tex="{computed F}" /> |
+| Within labs | <InlineMath tex="472" /> | <InlineMath tex="{computed SSW}" /> | <InlineMath tex="{computed MSW}" /> | |
+| Total | <InlineMath tex="479" /> | <InlineMath tex="{computed SST}" /> | | |
+
+| Parameter | Value |
+|-----------|-------|
+| Test statistic <InlineMath tex="F" /> | {computed value} |
+| Numerator df <InlineMath tex="\nu_1" /> | 7 |
+| Denominator df <InlineMath tex="\nu_2" /> | 472 |
+| Significance level <InlineMath tex="\alpha" /> | 0.05 |
+| Critical value <InlineMath tex="F_{0.95,\,7,\,472}" /> | {computed value} |
+
+**Conclusion:** The F-statistic {falls within / exceeds} the critical value. {If F < F_critical:} We **fail to reject** <InlineMath tex="H_0" /> -- the lab means are not significantly different at the 5% level, confirming that the labs can be treated as homogeneous. {If F > F_critical:} We **reject** <InlineMath tex="H_0" /> -- at least one lab mean differs; however, the lab effect remains small relative to the dominant batch effect.
+
+NOTE: Based on the existing MDX text stating "It is reasonable to treat the labs as homogeneous," the expected outcome is that the lab ANOVA F-statistic will be modest relative to the critical value, supporting the homogeneity conclusion. However, the batch effect inflates within-lab variability, so consider also computing the ANOVA on within-batch residuals (i.e., after removing the batch mean). If the pooled ANOVA yields a significant result due to the batch confound, add a brief note explaining this and also report the within-batch analysis. The executor should check the results and write an accurate conclusion.
+
 The batch effect of approximately 75 to 100 units on location dominates any lab effects. It is reasonable to treat the labs as homogeneous for purposes of analyzing the primary machining factors.
 ```
 
@@ -623,9 +702,11 @@ CRITICAL CONTENT PRESERVATION: Map every paragraph to its new location before ed
   <done>
 - ceramic-strength.mdx has "## Response Variable Analysis" (renamed from "Graphical Output and Interpretation")
 - ceramic-strength.mdx has "## Batch Effect Analysis" as H2 with subsections: Bihistogram, Batch Box Plot, Batch Block Plots, Batch Statistical Tests
-- ceramic-strength.mdx has "## Lab Effect Analysis" as H2 with subsections: Lab Box Plot, Lab Box Plot by Batch
+- ceramic-strength.mdx has "## Lab Effect Analysis" as H2 with subsections: Lab Box Plot, Lab Box Plot by Batch, Lab Statistical Tests
+- Lab Statistical Tests subsection contains one-way ANOVA F-test with computed F-statistic, df (7, 472), critical value, ANOVA table, and conclusion about lab homogeneity
 - ceramic-strength.mdx has "## Primary Factors Analysis" as H2 with placeholder subsections for DOE plots + moved Ranked Effects tables
 - CeramicStrengthPlots.astro has all new plot types in PlotType union and switch statement
+- CeramicStrengthPlots.astro computes lab ANOVA (SSB, SSW, MSB, MSW, F-statistic) from ceramicStrength dataset
 - Bihistogram renders two back-to-back distributions with Batch 1 top and Batch 2 bottom
 - Block plot renders batch means by lab showing consistent batch effect
 - Lab box plots render 8-group box plots
@@ -645,6 +726,9 @@ CRITICAL CONTENT PRESERVATION: Map every paragraph to its new location before ed
 - grep for "## Batch Effect Analysis" confirms H2 promotion
 - grep for "## Lab Effect Analysis" confirms H2 promotion
 - grep for "## Primary Factors Analysis" confirms new section
+- grep for "### Lab Statistical Tests" in ceramic-strength.mdx confirms lab ANOVA subsection exists
+- grep for "one-factor ANOVA" or "one-way ANOVA" in ceramic-strength.mdx confirms ANOVA test content
+- grep for "lab means are not significantly different" or "at least one lab mean" in ceramic-strength.mdx confirms ANOVA conclusion
 - grep for "batch-bihistogram" in CeramicStrengthPlots.astro confirms new type
 - grep for "batch-block-plot" in CeramicStrengthPlots.astro confirms new type
 - grep for "lab-box-plot" in CeramicStrengthPlots.astro confirms new type
@@ -652,12 +736,13 @@ CRITICAL CONTENT PRESERVATION: Map every paragraph to its new location before ed
 - grep for "generateDoeMeanPlot" in index.ts confirms export
 - grep for "generateBlockPlot" in index.ts confirms export
 - grep for "generateInteractionPlot" in index.ts confirms export
+- grep for "fQuantile" in CeramicStrengthPlots.astro confirms ANOVA critical value computation
 - Count of CeramicStrengthPlots component calls in MDX should be >= 11 (original 8 + bihistogram + block plot + 3 lab box plots)
 - No "## Graphical Output and Interpretation" heading remains (renamed)
 </verification>
 
 <success_criteria>
-Four new DOE-specific SVG generators exist and produce valid SVG markup. The ceramic-strength.mdx follows the DOE Variation canonical template with 6 major H2 sections (Background, Response Variable, Batch Effect, Lab Effect, Primary Factors, Quantitative Output). All Response Variable, Batch Effect, and Lab Effect subsections have individually named headings with CeramicStrengthPlots component calls rendering actual visualizations. The build passes with no errors.
+Four new DOE-specific SVG generators exist and produce valid SVG markup. The ceramic-strength.mdx follows the DOE Variation canonical template with 6 major H2 sections (Background, Response Variable, Batch Effect, Lab Effect, Primary Factors, Quantitative Output). All Response Variable, Batch Effect, and Lab Effect subsections have individually named headings with CeramicStrengthPlots component calls rendering actual visualizations. The Lab Effect Analysis section includes a Lab Statistical Tests subsection with a one-way ANOVA F-test comparing lab means, confirming the labs can be treated as homogeneous. The build passes with no errors.
 </success_criteria>
 
 <output>
